--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
   <div class="header">
     <div>
-      <img src="/internet.jpg" alt="img1">
+      <img src="internet.jpg" alt="img1">
       <span>JORDIN </span>
     </div>
   </div>
